--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="Illustration.png" class="background-image" alt="Mask">
-        <div class="signup-wrapper" id="signupWrapper">
-            <div class="signup-item">
-                <div class="signup-top">
+        <img src="Illustration.png" class="background-image"">
+        <div class="start-wrapper" id="signupWrapper">
+            <div class="start-item">
+                <div class="start-top">
                     <h1>
                         Signup
                     </h1>
