--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                         There is no charge upon registration!
                     </p>
                 </div>
-                <div class="form-wrapper">
-                    <div class="form-item">
+                <div class="SFO-wrapper">
+                    <div class="SFO-item">
                         <form action="" id="signupForm">
                             <div class="input-wrapper">
                                 <label for="email">Email Adress</label>
@@ -36,7 +36,7 @@
                                     <option value="Georgia">Italy</option>
                                     <option value="Georgia">United States</option>
                                 </select>
-                                <span class="change">
+                                <span class="clickthing">
                                     Change
                                 </span>
                             </div>
