--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     Change
                                 </span>
                             </div>
-                            <div class="bottom-inputs flex">
+                            <div class="down-inputs flex">
                                 <div class="input-wrapper input-wrapper-bottom">
                                     <label for="city">City</label>
                                     <input type="text" id="city" name="email" name="city">
@@ -50,7 +50,7 @@
                                     <input type="number"  name="zip">
                                 </div>
                             </div>
-                            <div class="button-wrapper flex">
+                            <div class="clicker-wrapper flex">
                                 <button type="submit" class="signup-button">
                                     Signup now
                                 </button>
