--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="social-signup flex">
+                <div class="people-signup flex">
                     <button>
                         Signup with Facebook
                     </button>
